--- a/styles.css
+++ b/styles.css
@@ -182,12 +182,18 @@ body {
     animation-delay: 0.15s, 0.15s;
 }
 
-footer {
+.footer {
     text-align: center;
-    margin-top: 20px;
-    padding: 10px;
+    padding: 10px 0;
+    color: #fff;
     font-family: 'Nobile', sans-serif;
-    color: #777;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer p {
+    margin: 0;
 }
 
 @keyframes slideUp {
